[gd_scene load_steps=12 format=3 uid="uid://581dxkuujjhl"]

[ext_resource type="Script" path="res://Game/game.gd" id="1_bky0m"]
[ext_resource type="FontFile" uid="uid://iwea6w8g542t" path="res://fonts/static/Tiny5-Regular.ttf" id="1_ikt3o"]
[ext_resource type="StyleBox" uid="uid://uw0vj2wtxhle" path="res://button_style.tres" id="2_csffl"]
[ext_resource type="Texture2D" uid="uid://bqqi4oprqrbut" path="res://icons/map.png" id="4_pu54r"]
[ext_resource type="Texture2D" uid="uid://ythxm0ghc35c" path="res://icons/interface-bg.svg" id="5_535wf"]
[ext_resource type="Texture2D" uid="uid://b5uaj1d84sgo5" path="res://icons/inventory.png" id="5_yo140"]
[ext_resource type="Texture2D" uid="uid://ba0lvhbjf8p76" path="res://icons/token.svg" id="6_fw0lh"]
[ext_resource type="Texture2D" uid="uid://cjr1nr4m6wvij" path="res://Game/health.png" id="7_rxoqg"]
[ext_resource type="Texture2D" uid="uid://dw8t06vpvnuxx" path="res://icons/energy.png" id="8_x0nv6"]
[ext_resource type="Texture2D" uid="uid://cx3irl5q8qmv4" path="res://icons/player-icon.png" id="10_0hpcp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxflk"]
bg_color = Color(0.192157, 0.25098, 0.160784, 1)
corner_detail = 1

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bky0m")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_top = 192.0
offset_right = 1080.0
offset_bottom = 1704.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1080, 1512)
render_target_update_mode = 4

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 0
offset_top = 1704.0
offset_right = 1080.0
offset_bottom = 1920.0

[node name="MapButton" type="Button" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_ikt3o")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = ExtResource("2_csffl")
icon_alignment = 1
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer/MapButton"]
layout_mode = 0
offset_left = 72.0
offset_top = 32.0
offset_right = 182.0
offset_bottom = 194.0

[node name="TextureRect" type="TextureRect" parent="BoxContainer/MapButton/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_pu54r")
expand_mode = 4
stretch_mode = 5

[node name="Label" type="Label" parent="BoxContainer/MapButton/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ikt3o")
theme_override_font_sizes/font_size = 42
text = "Карта"

[node name="InventoryButton" type="Button" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_ikt3o")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = ExtResource("2_csffl")

[node name="TextureRect" type="TextureRect" parent="BoxContainer/InventoryButton"]
clip_contents = true
layout_mode = 2
offset_left = 81.0
offset_top = 32.0
offset_right = 191.0
offset_bottom = 142.0
texture = ExtResource("5_yo140")
expand_mode = 5
stretch_mode = 4
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": false,
"output_section": false,
"slice_section": false
}

[node name="Label" type="Label" parent="BoxContainer/InventoryButton"]
layout_mode = 2
offset_left = 41.0
offset_top = 144.0
offset_right = 235.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("1_ikt3o")
theme_override_font_sizes/font_size = 42
text = "Инвентарь"

[node name="Button3" type="Button" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_ikt3o")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = ExtResource("2_csffl")
text = "Персонаж"

[node name="Button4" type="Button" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_ikt3o")
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = ExtResource("2_csffl")
text = "Настройки"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 30.0
scale = Vector2(26.88, 6.301)
theme_override_styles/panel = SubResource("StyleBoxFlat_pxflk")

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 213.0
scale = Vector2(0.078487, 0.141167)
texture = ExtResource("5_535wf")

[node name="Controls" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 88.0
offset_right = 1040.0
offset_bottom = 142.0

[node name="HealthContainer" type="HBoxContainer" parent="Controls"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 24

[node name="TextureRect" type="TextureRect" parent="Controls/HealthContainer"]
layout_mode = 2
texture = ExtResource("7_rxoqg")
expand_mode = 2

[node name="Label" type="Label" parent="Controls/HealthContainer"]
modulate = Color(0, 0.705882, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ikt3o")
theme_override_font_sizes/font_size = 48
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnergyContainer" type="HBoxContainer" parent="Controls"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 24

[node name="TextureRect" type="TextureRect" parent="Controls/EnergyContainer"]
layout_mode = 2
texture = ExtResource("8_x0nv6")
expand_mode = 3

[node name="Label" type="Label" parent="Controls/EnergyContainer"]
modulate = Color(0, 0.705882, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ikt3o")
theme_override_font_sizes/font_size = 48
text = "100"

[node name="MoneyContainer" type="HBoxContainer" parent="Controls"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 24

[node name="TextureRect" type="TextureRect" parent="Controls/MoneyContainer"]
layout_mode = 2
texture = ExtResource("6_fw0lh")
expand_mode = 3

[node name="Label" type="Label" parent="Controls/MoneyContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ikt3o")
theme_override_font_sizes/font_size = 48
text = "100"

[node name="StatsBar" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 1169.0
offset_bottom = 94.0
scale = Vector2(0.886, 0.8)

[node name="HealthContainer" type="HBoxContainer" parent="StatsBar"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 24

[node name="TextureRect" type="TextureRect" parent="StatsBar/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("10_0hpcp")
expand_mode = 2

[node name="Label" type="Label" parent="StatsBar/HealthContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ikt3o")
theme_override_font_sizes/font_size = 42
text = "1"

[node name="EnergyContainer" type="HBoxContainer" parent="StatsBar"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 24

[node name="TextureRect" type="TextureRect" parent="StatsBar/EnergyContainer"]
layout_mode = 2
size_flags_horizontal = 6
expand_mode = 3

[node name="Label" type="Label" parent="StatsBar/EnergyContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ikt3o")
theme_override_font_sizes/font_size = 42

[node name="MoneyContainer" type="HBoxContainer" parent="StatsBar"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 24

[node name="TextureRect" type="TextureRect" parent="StatsBar/MoneyContainer"]
layout_mode = 2
expand_mode = 3

[node name="Label" type="Label" parent="StatsBar/MoneyContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ikt3o")
theme_override_font_sizes/font_size = 42

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="BoxContainer/MapButton" to="." method="_on_map_button_pressed"]
[connection signal="pressed" from="BoxContainer/InventoryButton" to="." method="_on_inventory_button_pressed"]
